Save on Exit in all lenguages

--- a/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel_fr.properties
+++ b/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel_fr.properties
@@ -55,3 +55,4 @@ file = Fichier
 open = Ouvrir
 opfile = Ouvrir un Fichier
 saveas = Enregistrer sous
+wantToSave=Souhaitez-vous sauvegarder votre progression?
