--- a/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel_en.properties
+++ b/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel_en.properties
@@ -56,4 +56,8 @@ file = File
 open = Open
 opfile = Open a File
 saveas = Save as
+cdstue = CD Quantity
+plstue = Record Quantity
+mp3stue = Mp3 Quantity
 wantToSave=Would you like to save your progress?
+mbid = MBID
