--- a/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel_fr.properties
+++ b/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel_fr.properties
@@ -55,4 +55,8 @@ file = Fichier
 open = Ouvrir
 opfile = Ouvrir un Fichier
 saveas = Enregistrer sous
+cdstue = Quantité de CD
+plstue = Quantité de disques
+mp3stue = Quantité de Mp3
 wantToSave=Souhaitez-vous sauvegarder votre progression?
+mbid = MBID
