--- a/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel_sv.properties
+++ b/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel_sv.properties
@@ -55,4 +55,8 @@ file = Fil
 open = Öppna
 opfile = Öppna en fil
 saveas = Spara som
+cdstue = CD-antal
+plstue = Skivantal
+mp3stue = Mp3-antal
 wantToSave=Vill du spara dina framsteg?
+mbid = MBID
