add change Langue to login

--- a/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel_en.properties
+++ b/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel_en.properties
@@ -61,3 +61,5 @@ plstue = Record Quantity
 mp3stue = Mp3 Quantity
 wantToSave=Would you like to save your progress?
 mbid = MBID
+log = Login
+nhin = Add New
