--- a/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel_fr.properties
+++ b/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel_fr.properties
@@ -60,3 +60,5 @@ plstue = Quantité de disques
 mp3stue = Quantité de Mp3
 wantToSave=Souhaitez-vous sauvegarder votre progression?
 mbid = MBID
+log = Connexion
+nhin = Ajouter Nouveau
