--- a/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel_sv.properties
+++ b/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel_sv.properties
@@ -60,3 +60,5 @@ plstue = Skivantal
 mp3stue = Mp3-antal
 wantToSave=Vill du spara dina framsteg?
 mbid = MBID
+log = Logga in
+nhin = Lägg till Nytt
