--- a/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel_en.properties
+++ b/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel_en.properties
@@ -63,3 +63,5 @@ wantToSave=Would you like to save your progress?
 mbid = MBID
 log = Login
 nhin = Add New
+CdCount = CD Count
+VinylCount = Vinyl Count
