--- a/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel_fr.properties
+++ b/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel_fr.properties
@@ -1,4 +1,4 @@
-seting = Paramètres
+setting = Paramètres
 save = Enregistrer
 mid = IDMusique
 k = Artiste
@@ -62,3 +62,5 @@ wantToSave=Souhaitez-vous sauvegarder votre progression?
 mbid = MBID
 log = Connexion
 nhin = Ajouter Nouveau
+CdCount = Numéro de CD
+VinylCount = Numéro de vinyle
