--- a/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel_sv.properties
+++ b/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel_sv.properties
@@ -1,4 +1,4 @@
-seting = Inställningar
+setting = Inställningar
 save = Spara
 mid = MusikID
 k = Artist
@@ -62,3 +62,5 @@ wantToSave=Vill du spara dina framsteg?
 mbid = MBID
 log = Logga in
 nhin = Lägg till Nytt
+CdCount = CD-nummer
+VinylCount = Vinyl-nummer
