--- a/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel_fr.properties
+++ b/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel_fr.properties
@@ -1,8 +1,8 @@
-setting = Param\u00c3\u00a8tres
+setting = Param\u00e8tres
 save = Enregistrer
 mid = IDMusique
 k = Artiste
-i = Interpr\u00c3\u00a8te
+i = Interpr\u00e8te
 m = Musicien
 at = TitreAlbum
 a = Album
@@ -25,7 +25,7 @@ t = Titre
 mp3 = Mp3
 add = Ajouter
 delete = Supprimer
-hear = \u00c3\u0089couter
+hear = \u00c9couter
 rpcd = Emplacement Rayon CD
 rpp = Emplacement Rayon Disque
 lpcd = Prix Public CD
@@ -37,33 +37,33 @@ epmp3 = Prix Achat Mp3
 wkh = Ajouter au Panier
 wk = Panier
 all = Tous
-mtyp = Types de M\u00c3\u00a9dia
+mtyp = Types de M\u00e9dia
 mp = Prix Minimum
 hp = Prix Maximum
-tr = R\u00c3\u00a9sultats
+tr = R\u00e9sultats
 f = Filtrer
 end = Fin
 idError = L'ID n'est pas valide
-idUsedError = L'ID est d\u00c3\u00a9j\u00c3\u00a0 utilis\u00c3\u00a9
+idUsedError = L'ID est d\u00e9j\u00e0 utilis\u00e9
 mk = Catalogue Musique
 pa = Afficher Mot de Passe
 psw = Mot de Passe
 usser = Nom d'Utilisateur
 order = Commander
-out = Se D\u00c3\u00a9connecter
+out = Se D\u00e9connecter
 file = Fichier
 open = Ouvrir
 opfile = Ouvrir un Fichier
 saveas = Enregistrer sous
-cdstue = Quantit\u00c3\u00a9 de CD
-plstue = Quantit\u00c3\u00a9 de disques
-mp3stue = Quantit\u00c3\u00a9 de Mp3
+cdstue = Quantit\u00e9 de CD
+plstue = Quantit\u00e9 de disques
+mp3stue = Quantit\u00e9 de Mp3
 wantToSave=Souhaitez-vous sauvegarder votre progression?
 mbid = MBID
 log = Connexion
 nhin = Ajouter Nouveau
-CdCount = Num\u00c3\u00a9ro de CD
-VinylCount = Num\u00c3\u00a9ro de vinyle
+CdCount = Num\u00e9ro de CD
+VinylCount = Num\u00e9ro de vinyle
 lang = Langue
 safile = Enregistre toutes les modifications
 sasfile = Enregistre toutes les modifications dans un fichier choisi
