--- a/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel_sv.properties
+++ b/Programmieren 3 Gruppe 4/src/I18NPropertiesFiles/Bundel_sv.properties
@@ -1,4 +1,4 @@
-setting = Inst\u00c3\u00a4llningar
+setting = Inst\u00e4llningar
 save = Spara
 mid = MusikID
 k = Artist
@@ -6,16 +6,16 @@ i = Tolkningsartist
 m = Musiker
 at = AlbumTitel
 a = Album
-st = L\u00c3\u00a5tTitel
-sn = L\u00c3\u00a5t Namn
+st = L\u00e5tTitel
+sn = L\u00e5t Namn
 rc = HyllaPlatsCD
 rs = HyllaPlatsVinyl
-cvp = CDF\u00c3\u00b6rs\u00c3\u00a4ljningspris
-svp = VinylF\u00c3\u00b6rs\u00c3\u00a4ljningspris
-mvp = Mp3F\u00c3\u00b6rs\u00c3\u00a4ljningspris
-cep = CDF\u00c3\u00b6rk\u00c3\u00b6pspris
-sep = VinylF\u00c3\u00b6rk\u00c3\u00b6pspris
-mep = Mp3F\u00c3\u00b6rk\u00c3\u00b6pspris
+cvp = CDF\u00f6rs\u00e4ljningspris
+svp = VinylF\u00f6rs\u00e4ljningspris
+mvp = Mp3F\u00f6rs\u00e4ljningspris
+cep = CDF\u00f6rk\u00f6pspris
+sep = VinylF\u00f6rk\u00f6pspris
+mep = Mp3F\u00f6rk\u00f6pspris
 g = Genre
 cd = CD
 sp = Vinyl
@@ -23,7 +23,7 @@ p = Skiva
 v = Vinyl
 t = Titel
 mp3 = Mp3
-add = L\u00c3\u00a4gg till
+add = L\u00e4gg till
 delete = Ta bort
 hear = Lyssna
 rpcd = Hylla Plats CD
@@ -31,29 +31,29 @@ rpp = Hylla Plats Skiva
 lpcd = Listpris CD
 lpp = Listpris Skiva
 lpmp3 = Listpris Mp3
-epcd = Ink\u00c3\u00b6pspris CD
-epp = Ink\u00c3\u00b6pspris Skiva
-epmp3 = Ink\u00c3\u00b6pspris Mp3
-wkh = L\u00c3\u00a4gg till i kundvagn
+epcd = Ink\u00f6pspris CD
+epp = Ink\u00f6pspris Skiva
+epmp3 = Ink\u00f6pspris Mp3
+wkh = L\u00e4gg till i kundvagn
 wk = Kundvagn
 all = Alla
 mtyp = Mediatyper
 mp = Minsta Pris
-hp = H\u00c3\u00b6gsta Pris
-tr = Tr\u00c3\u00a4ffar
+hp = H\u00f6gsta Pris
+tr = Tr\u00e4ffar
 f = Filtrera
 end = Avsluta
-idError = Id \u00c3\u00a4r ogiltigt
-idUsedError = Id anv\u00c3\u00a4nds redan
+idError = Id \u00e4r ogiltigt
+idUsedError = Id anv\u00e4nds redan
 mk = Musik Katalog
-pa = Visa l\u00c3\u00b6senord
-psw = L\u00c3\u00b6senord
-usser = Anv\u00c3\u00a4ndarnamn
-order = Best\u00c3\u00a4llning
+pa = Visa l\u00f6senord
+psw = L\u00f6senord
+usser = Anv\u00e4ndarnamn
+order = Best\u00e4llning
 out = Logga ut
 file = Fil
-open = \u00c3\u0096ppna
-opfile = \u00c3\u0096ppna en fil
+open = \u00d6ppna
+opfile = \u00d6ppna en fil
 saveas = Spara som
 cdstue = CD-antal
 plstue = Skivantal
@@ -61,9 +61,9 @@ mp3stue = Mp3-antal
 wantToSave=Vill du spara dina framsteg?
 mbid = MBID
 log = Logga in
-nhin = L\u00c3\u00a4gg till Nytt
+nhin = L\u00e4gg till Nytt
 CdCount = CD-nummer
 VinylCount = Vinyl-nummer
-lang = Spr\u00c3\u00a5k
+lang = Spr\u00e5k
 safile = Sparar alla \u00e4ndringar
 sasfile = Sparar alla \u00e4ndringar i en vald fil
